syntax = "proto3";

package v1.nfpbv1;

import "v1/nfpb/msg_genre.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/nfpb;nfpbv1";

message UpdateGenreRequest {
  int32           genreID   = 1;
  optional string genreName = 2;
}

message UpdateGenreResponse {
  Genre genre = 1;
}